# nexusystem

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  flake.nix  mkdocs.yml
.github/: FUNDING.yml
.github/assets/: README_template.md
.github/scripts/: create_readme.sh  keybindings_to_markdown.sh
.github/workflows/: docs.yml
docs/: CONTRIBUTING.md  KEYBINDINGS-HYPRLAND.md  SCRIPTS.md  SERVER.md  THEMES.md  USAGE_TIPS.md  contributing.md  index.md  keybindings.md  quickstart.md  themes.md  usage_tips.md
docs/stylesheets/: extra.css
helpers/: default.nix
home/: essentials.nix  gaming.nix  shared.nix
home/scripts/lazycommit/: default.nix  pyproject.toml  shell.nix
home/scripts/lazycommit/lazycommit/: cli.py  commit.py  config.py  console.py  git.py  providers.py  ui.py
home/scripts/package-audit/: default.nix  pyproject.toml
home/scripts/package-audit/package_audit/: cli.py  data.py  tui.py
hosts/: shared.nix
hosts/iso/: home.nix  (+2 more)
nixos/: affinity.nix  bluetooth.nix  codex.nix  docker.nix  fonts.nix  gamemode.nix  glance.nix  gpg.nix  home-manager.nix  hyprland.nix  nix.nix  optimize-battery.nix  pam.nix  printers.nix  pseudo-display-manager.nix  scanners.nix  sddm.nix  shared.nix  steam.nix  stylix.nix  syncthing.nix  systemd-boot.nix  users.nix  utils.nix  waydroid.nix
server-modules/: ssh.nix
themes/: berserk-eclipse.nix  berserk.nix  colorful-sliced.nix  colorful_sliced.nix  dynamic-variant.nix  example.nix  hazbin-hotel.nix  initial-d.nix  initial_d.nix  moon.nix  one-piece.nix  pedro.nix  pink-lofi.nix  touch-grass.nix  touch_grass.nix
(+121 files in other folders)
