[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycommit"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["requests", "typer", "rich"]

[project.scripts]
lazycommit = "lazycommit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lazycommit*"]
