[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "package-audit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["textual"]

[project.scripts]
package-audit = "package_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["package_audit*"]
